qstring-uneeded-heap-allocations: Fix wrong usage of QL1S

QString("").sprintf() can't be replaced with QL1S, only QSL.

BUG: 358732